--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ kramdown:
 disqus_username: hux
 
 # Netease settings
-netease_comment: false
+netease_comment: true
 
 # Analytics settings
 # Baidu Analytics
@@ -86,7 +86,7 @@ chrome-tab-theme-color: "#000000"
 service-worker: true
 
 # MathJax rendering for layout:page (e.g. post preview)
-page-mathjax: false
+page-mathjax: true
 
 # Friends
 friends:
